upgrad-capstone-main/cluster/upg-loadme/upg-loadme-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upg-loadme-service-lb
  namespace: demo
spec:
  selector:
    app: upg-loadme
  type: LoadBalancer
  ports:
  - name: app-port
    protocol: TCP
    port: 80
    targetPort: 8080
